cabal-version:      3.0
name:               chip8
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Joaquín Colonnello
maintainer:         joaquincolonnello@hotmail.com

-- A copyright notice.
-- copyright:
-- category:

executable chip8
    main-is:          Main.hs
    ghc-options: -threaded

    -- Modules included in this executable, other than Main.
    other-modules:
        Implementations.SimpleMemory
        Implementations.DictMemory
        Implementations.MVectorMemory
        Implementations.DictRegisters
        Memory
        Zoom
        Inputs
        CPU
        Emulator
        Register

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0, bytestring, vector, transformers, ghc, lens, bits, containers, sdl2, mtl, primitive
    hs-source-dirs:   app
    default-language: Haskell2010
